<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.uc.mail.hollanjk.hollanjk_tipcalculator.PizzaActivity">

    <EditText
        android:id="@+id/preTaxTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preTax"/>

    <EditText
        android:id="@+id/originalTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/totalBill"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/excellent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/excellent"
            android:textOn="@string/excellent"/>

        <ToggleButton
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/normalPizza"
            android:textOff="@string/normalPizza"/>

        <ToggleButton
            android:id="@+id/poor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/poor"
            android:textOff="@string/poor"/>

        <ToggleButton
            android:id="@+id/veryBad"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/veryBad"
            android:textOff="@string/veryBad"/>
    </LinearLayout>

    <EditText
        android:id="@+id/distanceDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance"/>

    <EditText
        android:id="@+id/selectedTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip"/>
    <EditText
        android:id="@+id/grandTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grandTotal"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roundUp"/>

</LinearLayout>

